--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>マイサイト</title>
 </head>
 <body>
-    <h1>マイファーストサイト</h1>
+    <h1>マイサイト</h1>
     <p>テスト公開用に作ったサイトです</p>
 </body>
 </html>
